--- a/MagicCarpet/MagicCarpet/MagicCarpet.csproj
+++ b/MagicCarpet/MagicCarpet/MagicCarpet.csproj
@@ -61,6 +61,12 @@
     <XnaCompressContent>true</XnaCompressContent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Indiefreaks.AOP.Profiler">
+      <HintPath>E:\Program Files (x86)\Indiefreaks.com\Indiefreaks Game Profiler\Assemblies\Windows\Indiefreaks.AOP.Profiler.dll</HintPath>
+    </Reference>
+    <Reference Include="Indiefreaks.Xna.Profiler">
+      <HintPath>E:\Program Files (x86)\Indiefreaks.com\Indiefreaks Game Profiler\Assemblies\Windows\Indiefreaks.Xna.Profiler.dll</HintPath>
+    </Reference>
     <Reference Include="log4net">
       <HintPath>lib\log4net.dll</HintPath>
     </Reference>
@@ -155,6 +161,7 @@
     <Compile Include="com\xexuxjy\magiccarpet\GameStateManagement\Screens\OptionsMenuScreen.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\GameStateManagement\Screens\PauseMenuScreen.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\GameStateManagement\Screens\PlayerIndexEventArgs.cs" />
+    <Compile Include="com\xexuxjy\magiccarpet\gui\MiniMap.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\interfaces\IKeyboardCallback.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\manager\ActionPool.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\manager\GameObjectManager.cs" />
@@ -257,6 +264,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!--
       To modify your build process, add your task inside one of the targets below and uncomment it. 
       Other similar extension points exist, see Microsoft.Common.targets.
