--- a/trunk/MagicCarpet/MagicCarpet/MagicCarpet.csproj
+++ b/trunk/MagicCarpet/MagicCarpet/MagicCarpet.csproj
@@ -161,6 +161,7 @@
     <Compile Include="com\xexuxjy\magiccarpet\GameStateManagement\Screens\OptionsMenuScreen.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\GameStateManagement\Screens\PauseMenuScreen.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\GameStateManagement\Screens\PlayerIndexEventArgs.cs" />
+    <Compile Include="com\xexuxjy\magiccarpet\gui\EventWindow.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\gui\GuiComponent.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\gui\PlayerHud.cs" />
     <Compile Include="com\xexuxjy\magiccarpet\gui\MiniMap.cs" />
