--- a/trunk/Gladius/Gladius/Gladius.csproj
+++ b/trunk/Gladius/Gladius/Gladius.csproj
@@ -482,6 +482,10 @@
       <Link>Content\Models\Arena\Common\ViewingBox.xnb</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\..\GladiusContent\GladiusContent\GladiusContent\bin\Windows\Content\UI\backgrounds\Gladii.xnb">
+      <Link>Content\UI\backgrounds\Gladii.xnb</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
